# panpan-apk

./: .gitignore  CLI_GUIDE.md  CRITICAL_FILES.md  Cargo.toml  README.md  README_FINAL.md  build_android.ps1  cleanup.ps1
.cargo/: config.toml
android/: build.gradle  gradlew  gradlew.bat
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
demo_runner/: Cargo.toml
demo_runner/src/: main.rs
example_crate/: Cargo.toml
example_crate/assets/: roboto_sdf.json
example_crate/src/: lib.rs
examples/demo_game/: Cargo.toml  build.rs
examples/demo_game/src/: lib.rs
panpan/: Cargo.toml
panpan/src/: engine.rs  graphics.rs  input.rs  lib.rs  platform.rs  types.rs  util.rs
panpan/src/platform/android/: jni.rs
panpan/src/platform/windows/: main.rs
panpan/src/renderer/: mod.rs  opengles.rs  sdf_text.rs
runners/android/: Cargo.toml
runners/android/android/: settings.gradle
runners/android/android/app/: build.gradle
runners/android/android/app/src/main/: AndroidManifest.xml
runners/android/android/gradle/wrapper/: gradle-wrapper.properties
runners/android/jni_wrapper/: Cargo.toml
runners/android/jni_wrapper/.cargo/: config.toml
runners/android/jni_wrapper/src/: lib.rs
runners/android/src/: lib.rs
runners/desktop/: Cargo.toml
runners/desktop/src/: lib.rs
scripts/: build-android.ps1  build-android.sh
tools/panpan-apk/: Cargo.toml
tools/panpan-apk/src/: main.rs  main.rs.bc
tools/panpan-cli/: Cargo.toml
tools/panpan-cli/src/: main.rs
tools/panpan-desktop/: Cargo.toml
tools/panpan-desktop/src/: main.rs
(+1 files in other folders)
