[package]
name = "panpan_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]
panpan = { path = "../panpan" }

[target.'cfg(target_os = "android")'.dependencies]
panpan = { path = "../panpan", features = ["android"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
panpan = { path = "../panpan", features = ["desktop"] }
