[package]
name = "panpan"
version = "0.1.0"
edition = "2024"

[dependencies]
# Desktop
winit = { version = "0.30.12", optional = true }
# GL loader / bindings
glow = "0.16.0"
raw-window-handle = "0.6"
# Optional features for desktop build
glutin = { version = "0.32.3", optional = true }
# Android JNI
jni = { version = "0.21", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
image = "0.25.9"


[features]
desktop = ["winit", "glutin"]
android = ["jni"]
